developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/OJSERLIB__VEDA_Company_Enquiry_Response__c.object-meta.xml
<CustomObject>
    <label>VEDA Credit Check Company Details</label>
    <nameField>
        <label>VEDA Company Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VEDA Credit Check Company Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>