developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__ABN_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ABN_Status_Code__c</fullName>
    <label>ABN Status Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>