developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__ABN_Status_From_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ABN_Status_From_Date__c</fullName>
    <label>ABN Status From Date</label>
    <type>Date</type>
</CustomField>