developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Abr_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Abr_Last_Updated_Date__c</fullName>
    <label>Abr Last Updated Date</label>
    <type>Date</type>
</CustomField>