developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__AccountID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__AccountID__c</fullName>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VEDA_Company_Enquiry_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>