developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Business_Address_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Address_Post_Code__c</fullName>
    <label>Business Address Post Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>