developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Entity_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Entity_Type_Description__c</fullName>
    <label>Entity Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>