developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Gst_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Gst_Status_Code__c</fullName>
    <label>Gst Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>