developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Incorporation_Date__c</fullName>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>