developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Incorporation_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Incorporation_State__c</fullName>
    <label>Incorporation State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>