developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Main_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Main_Legal_Name__c</fullName>
    <label>Main Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>