developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>VEDA_Company_Enquiry_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>