developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Organisation_Name_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Name_Start_Date__c</fullName>
    <label>Organisation Name Start Date</label>
    <type>Date</type>
</CustomField>