developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Type__c</fullName>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>