developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Principal_Address_City__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Principal_Address_City__c</fullName>
    <label>Principal Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>