developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Principal_Address_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Principal_Address_State__c</fullName>
    <label>Principal Address State</label>
    <length>4</length>
    <type>Text</type>
</CustomField>