developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Probability_Adverse__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Probability_Adverse__c</fullName>
    <label>Probability Adverse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>