developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__RegisteredOffice_Address_PostCode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegisteredOffice_Address_PostCode__c</fullName>
    <label>RegisteredOffice Address PostCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>