developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__RegisteredOffice_Address_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegisteredOffice_Address_State__c</fullName>
    <label>RegisteredOffice Address State</label>
    <length>6</length>
    <type>Text</type>
</CustomField>