developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__RegisteredOffice_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegisteredOffice_Address_Street__c</fullName>
    <label>RegisteredOffice Address Street</label>
    <length>225</length>
    <type>Text</type>
</CustomField>