developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Score__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Score__c</fullName>
    <label>Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>