developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__VEDA_File_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_File_Creation_Date__c</fullName>
    <label>Veda File Creation Date</label>
    <type>Date</type>
</CustomField>