developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/fields/OJSERLIB__Veda_File_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Veda_File_Number__c</fullName>
    <label>Veda File Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>