developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Company_Enquiry_Response__c/listViews/OJSERLIB__All.listView-meta.xml
<ListView>
    <fullName>OJSERLIB__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>